Decription text now no longer overflows

--- a/src/style.css
+++ b/src/style.css
@@ -146,7 +146,7 @@ h1 {
     border: solid 4px var(--yellow);
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 800px) {
     .projects {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
